--- a/main.css
+++ b/main.css
@@ -1,5 +1,30 @@
 /* START OF FIRST QUESTION */
 
+.lightbox-wrapp .popup {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+    padding: 16px;
+    border: 16px solid orange;
+    background-color: white;
+    z-index:1002;
+    overflow: auto;
+}
+
+/* LIGHTBOX COVER
+
+.cover {
+    position:fixed; 
+    top:0; 
+    left:0; 
+    width:100%; 
+    height:100%; 
+    background: rgba(0,0,0,.7);
+    text-align:center;
+} */
+
 .instruction-text {
 	font-size: 1.5em;
 }
@@ -82,6 +107,53 @@
 	width: 100%;
 }
 
+.lightbox-wrapper {
+	width: 500px;
+	margin: 80px auto 0 auto;
+	position: relative;
+	padding: 10px;
+	border-radius: 10px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	background-color: #FFF;
+}
+
+.lightbox-close-anchor-box {
+	height: 40px;
+	width: 100px;
+	position: relative;
+	border-radius: 10px;
+	border-bottom-left-radius: 10px;
+	text-align: center;
+	border-bottom-right-radius: 10px;
+	vertical-align: middle;
+	line-height: 40px;
+	background: rgb(232, 130,137);
+	left: 390px;
+}
+
+.lightbox-close-anchor {
+	color: #FFF;
+	font-weight: 500;
+	font-size: 1.05em;
+	display: inline;
+	position: static;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.media-block-img {
+	float: left;
+	margin-right: 20px;
+}
+
+.big-cupcake {
+	overflow: hidden;
+}
+
+.cupcake {
+	margin-left: 75px;
+}
 
 
 
